(executable
 (name mini_ml_example)
 (libraries pprint))

(rule
 (deps mini_ml_example.mld)
 (targets mini_ml_example.ml)
 (mode promote)
 (action 
  (with-stdout-to %{targets}
   (run awk "/\\]}/ { display=0 } 
             { if (display) print substr($0,3) }
             /{\\[/ { display=1; print \"\" }"
            %{deps}))))

(documentation)
